Make sure transactions have a unique ID after loading from file

BUG: 246108

svn path=/trunk/extragear/office/kmymoney/; revision=1173699