kmymoney/mymoney/storage/mymoneyseqaccessmgrtest.cpp
@@ -1704,29 +1704,4 @@ void MyMoneySeqAccessMgrTest::testLoaderFunctions()
 }
 
 
-void MyMoneySeqAccessMgrTest::testDuplicateTransactionId()
-{
-  // we don't need the transaction started by setup() here
-  m->rollbackTransaction();
-
-  // load two different transactions with the same ID
-  QMap<QString, MyMoneyTransaction> tmap;
-  MyMoneyTransaction t("T000000108", MyMoneyTransaction());
-  t.setPostDate(QDate(2010, 10, 10));
-  tmap[t.uniqueSortKey()] = t;
-  t.setPostDate(QDate(2010, 10, 11));
-  tmap[t.uniqueSortKey()] = t;
-  t.setPostDate(QDate(2010, 10, 12));
-  tmap[t.uniqueSortKey()] = t;
-  QVERIFY(tmap.count() == 3);
-
-  m->loadTransactions(tmap);
-  QVERIFY(m->m_transactionList.values().count() == tmap.values().count());
-  QVERIFY(m->m_transactionList.keys().count() == tmap.keys().count());
-  QVERIFY(m->m_nextTransactionID == 110);
-
-  // restart a transaction so that teardown() is happy
-  m->startTransaction();
-}
-
 #include "mymoneyseqaccessmgrtest.moc"
